<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CameraHome.CameraHomeActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/camerabutton"
        android:layout_width="123dp"
        android:layout_height="65dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/navy"
        android:text="@string/camera_button"
        app:layout_constraintBottom_toTopOf="@+id/descriptionInputText"
        app:layout_constraintEnd_toEndOf="@+id/previewimage" />

    <ImageView
        android:id="@+id/previewimage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/gallerybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/gallerybutton"
        android:layout_width="123dp"
        android:layout_height="65dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/navy"
        android:text="@string/gallery_button"
        app:layout_constraintBottom_toTopOf="@+id/descriptionInputText"
        app:layout_constraintStart_toStartOf="@+id/previewimage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/submitbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="15"
            android:minLines="6"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.w4_app.customView.CustomButton
        android:id="@+id/submitbutton"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/submit_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>